# rwth-fressbot

./: Cargo.toml  Cross.toml
.github/workflows/: build.yml  debug-vpn.yml
src/: main.rs
src/domain/: mod.rs
src/domain/fetch/: cache.rs  html_fetcher.rs  mod.rs
src/domain/model/: canteen.rs  day_of_week.rs  menu.rs  mod.rs
src/menu/: mod.rs
src/model/: canteen.rs  menu.rs  mod.rs
src/tg/: command.rs  dispatch.rs  mod.rs
