[package]
name = "rwth-fressbot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = { version = "0.4.26", features = ["unstable-locales"] }
itertools = "0.11.0"
lazy_static = "1.4.0"
log = { version = "0.4.17", features = ["std"] }
lru = { version = "0.11.1", default-features = false }
nom = "7.1.3"
phf = { version = "0.11", features = ["macros"] }
pretty_env_logger = "0.5.0"
regex = "1.8.3"
reqwest = { version = "0.11.17", features = ["native-tls"] }
scraper = "0.17.0"
strum = "0.25.0"
strum_macros = "0.25.2"
teloxide = { version = "0.12.2", features = ["macros"] }
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }

[features]
native-tls-vendored = ["reqwest/native-tls-vendored"]
